--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,15 @@
-# EditorConfig is awesome: https://EditorConfig.org
-
-# top-most EditorConfig file
 root = true
 
 [*]
-indent_style = tab
-indent_size = 4
-end_of_line = lf
 charset = utf-8
+end_of_line = lf
+insert_final_newline = true
+indent_style = space
+indent_size = 4
+trim_trailing_whitespace = true
+
+[*.md]
 trim_trailing_whitespace = false
-insert_final_newline = false
+
+[*.{yml,yaml,ts,tsx,blade.php,js,jsx,css,sass,scss}]
+indent_size = 4
