--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "i18next": "^23.3.0",
     "next": "13.1.6",
     "next-i18next": "^14.0.0",
+    "next-seo": "^6.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^13.0.2",
