--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fontsource/poppins": "^5.0.5",
     "@mui/material": "^5.11.8",
     "@next/font": "13.1.6",
     "@types/node": "18.13.0",
