--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
     "eslint": "8.34.0",
-    "eslint-config-next": "13.1.6",
+    "eslint-config-next": "^13.4.13",
     "i18next": "^23.3.0",
-    "next": "13.1.6",
+    "next": "^13.4.13",
     "next-i18next": "^14.0.0",
     "next-seo": "^6.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-i18next": "^13.0.2",
     "react-icons": "^4.7.1",
     "typescript": "4.9.5"
