--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/poppins": "^5.0.5",
     "@mui/material": "^5.11.8",
     "@next/font": "13.1.6",
+    "@next/third-parties": "^14.1.3",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
