--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^13.4.13",
     "next-i18next": "^14.0.0",
     "next-seo": "^6.1.0",
+    "nextjs-toploader": "^3.6.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.1.2",
