--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.34.0",
     "eslint-config-next": "^13.4.13",
+    "framer-motion": "^11.5.6",
     "i18next": "^23.3.0",
     "next": "^13.4.13",
     "next-i18next": "^14.0.0",
