--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.8",
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.21.0",
     "@emotion/react": "^11.13.3",
@@ -20,9 +21,11 @@
     "@types/node": "22.7.3",
     "@types/react": "18.3.9",
     "@types/react-dom": "18.3.0",
+    "date-fns": "^4.1.0",
     "eslint": "9.11.1",
     "eslint-config-next": "^14.2.13",
     "framer-motion": "^11.8.0",
+    "graphql": "^16.9.0",
     "i18next": "^23.15.1",
     "next": "^14.2.13",
     "next-cloudinary": "^6.13.0",
