--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "22.7.3",
     "@types/react": "18.3.9",
     "@types/react-dom": "18.3.0",
+    "css-mediaquery": "^0.1.2",
     "date-fns": "^4.1.0",
     "eslint": "9.11.1",
     "eslint-config-next": "^14.2.13",
@@ -36,9 +37,12 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.0.2",
     "react-icons": "^5.3.0",
-    "typescript": "5.6.2"
+    "typescript": "5.6.2",
+    "ua-parser-js": "^1.0.39"
   },
   "devDependencies": {
+    "@types/css-mediaquery": "^0.1.4",
+    "@types/ua-parser-js": "^0.7.39",
     "eslint-config-prettier": "^9.1.0"
   }
 }
